Changed about.html file
testing the website

--- a/about.html
+++ b/about.html
@@ -78,10 +78,10 @@
         <li>
           <div class="userView">
             <div class="background"></div>
-            <a href="https://github.com/zkf85" target="_blank"><img class="circle z-depth-2" src="/assets/res/lion_king.jpg"></a>
-            <span class="white-text name">Zhu, Kefeng</span>
+            <a href="https://github.com/shravankumar0811" target="_blank"><img class="circle z-depth-2" src="/assets/res/lion_king.jpg"></a>
+            <span class="white-text name">Shravan, Kumar</span>
 			<!--
-            <span class="white-text email">zkf1985@gmail.com</span>
+            <span class="white-text email">shravanskotian@gmail.com</span>
 			-->
             <span class="white-text email"><i>A Programmer, An AI Practitioner</i></span>
           </div>
@@ -137,7 +137,7 @@ Remember that after enabling this, you have to enter the real dollar sings with 
 <div class="row">
   <div class="col s12 tag-div">
   <div class="user-pic center-align">
-    <a href="https://github.com/zkf85" target="_blank"><img class="circle hoverable z-depth-1" src="/assets/res/user.png" /></a>
+    <a href="https://github.com/shravankumar0811" target="_blank"><img class="circle hoverable z-depth-1" src="/assets/res/user.png" /></a>
   </div>
 
   <!--
