--- a/contact.html
+++ b/contact.html
@@ -70,10 +70,10 @@
         <li>
           <div class="userView">
             <div class="background"></div>
-            <a href="https://github.com/zkf85" target="_blank"><img class="circle z-depth-2" src="/assets/res/lion_king.jpg"></a>
+            <a href="https://github.com/shravanskotian0811" target="_blank"><img class="circle z-depth-2" src="/assets/res/lion_king.jpg"></a>
             <span class="white-text name">Zhu, Kefeng</span>
 			<!--
-            <span class="white-text email">zkf1985@gmail.com</span>
+            <span class="white-text email">shravanskotian@gmail.com</span>
 			-->
             <span class="white-text email"><i>A Programmer, An AI Practitioner</i></span>
           </div>
@@ -172,7 +172,7 @@ function topFunction() {
       </div>
       <div class="footer-copyright">
         <div class="container">
-          &#xA9; 2020 Everest. All rights reserved. Powered by <a href="https://github.com/zkf85">Kefeng</a>.
+          &#xA9; 2020 Everest. All rights reserved. Powered by <a href="https://github.com/shravanskotian0811">Shravan</a>.
         </div>
       </div>
     </footer>
