--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@ Remember that after enabling this, you have to enter the real dollar sings with 
   </div>
   -->
   <div class="user-intro center-align">
-    <h4 class="hidden">Hi I'm Kefeng Zhu. </h4>
+    <h4 class="hidden">Hi I'm Shravan Kumar. </h4>
   </div>
 
   <div class="divider"></div>
