--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@ Remember that after enabling this, you have to enter the real dollar sings with 
 <div class="row">
   <div class="col s12 tag-div">
   <div class="user-pic center-align">
-    <a href="https://github.com/shravankumar0811" target="_blank"><img class="circle hoverable z-depth-1" src="/assets/res/user.png" /></a>
+    <a href="https://github.com/shravankumar0811" target="_blank"><img class="circle hoverable z-depth-1" src="/assets/res/sk.png" /></a>
   </div>
 
   <!--
