--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <li>
           <div class="userView">
             <div class="background"></div>
+            <Body background="/src/assets/res/background.jpeg">  
             <a href="https://github.com/shravanskotian0811" target="_blank"><img class="circle z-depth-2" src="/assets/res/sk.jpg"></a>
             <span class="white-text name">Shravan Kumar</span>
 			<!--
@@ -94,7 +95,7 @@
       </ul>
     </header>
     <main>
-
+</style>
 <!--
 <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 -->
