--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <li>
           <div class="userView">
             <div class="background"></div>
-            <Body background="/src/assets/res/background.jpeg">  
+            <section class="mt-5 p-5" style="background: url(/src/assets/res/background.jpeg);background-size: cover;background-attachment: fixed;"></section>
             <a href="https://github.com/shravanskotian0811" target="_blank"><img class="circle z-depth-2" src="/assets/res/sk.jpg"></a>
             <span class="white-text name">Shravan Kumar</span>
 			<!--
