--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <i class="material-icons">menu</i>
         </a>
       </div>
+      
       <ul id="slide-out" class="side-nav fixed">
         <li>
           <div class="userView">
@@ -91,6 +92,7 @@
 
         <li class="subheader">OTHERS</li>
         <li><a class="waves-effect" href="/about"><i class="material-icons">person</i>About Me</a></li>
+        <li><a class="waves-effect" href="/calligraphy"><i class="material-icons">dashboard</i>exp</a></li>
         <!-- <li><a class="waves-effect" href="/contact"><i class="material-icons">email</i>Contact</a></li> -->
       </ul>
     </header>
