--- a/calligraphy.html
+++ b/calligraphy.html
@@ -48,6 +48,9 @@
           </div>
         </div>
       </nav>
+      <div class="background">
+        <img src="/assets/res/background.jpeg">
+      </div>
       <div class="container">
         <a href="#" data-activates="slide-out" class="button-collapse top-nav full hide-on-large-only">
           <i class="material-icons">menu</i>
