--- a/calligraphy.html
+++ b/calligraphy.html
@@ -71,13 +71,13 @@
     <main>
 
 <div class="container">
-  <p>這裡是我的書法練習場。</p>
+  <p>Welcome</p>
 
 </div>
 
 <!-- KF 03/01/2019  -->
 <!-- Modify back to top button -->
-<button onclick="topFunction()" id="myBtn-calligraphy" title="返回頂部"><i class="material-icons">vertical_align_top</i></button>
+<button onclick="topFunction()" id="myBtn-calligraphy" title="Home"><i class="material-icons">vertical_align_top</i></button>
 
 <script>
 // When the user scrolls down 20px from the top of the document, show the button
@@ -98,7 +98,7 @@ function topFunction() {
 }
 </script>
     </main>
-    <footer class="page-footer calligraphy-gray">
+    <footer class="page-footer calligraphy">
     <!--
       <div class="container">
         <div class="row">
