--- a/calligraphy.html
+++ b/calligraphy.html
@@ -98,8 +98,7 @@ function topFunction() {
 }
 </script>
     </main>
-    <footer class="page-footer calligraphy">
-    <!--
+    <footer class="page-footer calligraphy-grey">
       <div class="container">
         <div class="row">
           <div class="col s12">
@@ -109,10 +108,9 @@ function topFunction() {
           </div>
         </div>
       </div>
-      -->
       <div class="footer-copyright">
         <div class="container">
-          西元二零一九 己亥年 版權所有 克峯
+          &#xA9; Shravan. All rights reserved. Powered by <a href="https://github.com/shravanskotian0811">Shravan</a>.
         </div>
       </div>
     </footer>
