--- a/calligraphy.html
+++ b/calligraphy.html
@@ -130,7 +130,11 @@ function topFunction() {
     </footer>
     -->
     <div id="container">
-      <div id="footer"></div>
+      <div id="footer">
+        <div class="container">
+          &#xA9; Shravan. All rights reserved. Powered by <a href="https://github.com/shravanskotian0811">Shravan</a>.
+        </div>
+      </div>
     </div>
     <script src="//code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
