--- a/calligraphy.html
+++ b/calligraphy.html
@@ -36,15 +36,28 @@
   
   </head>
   <body>
+    <head>
+      <style>
+          #header {
+              position: fixed;
+              padding: 10px 0px 0px 0px;
+              bottom:100;
+              width: 100%;
+              /* Height of the footer*/ 
+              height: 100px;
+              background: green;
+              text-align: left;
+          }
+      </style>
+    
+    </head>
     <header>
-      <nav class="top-nav calligraphy-gray">
-        <div class="nav-wrapper">
+      <nav class="green">
+        <div id="header">
           <div class="container">
-            <a class="page-title">習書不輟</a>
-            <!--
-            <img class="buckeye_leaf" src="/assets/res/buckeye_leaf.png">
-            -->
-            <img class="calligraphy" src="/assets/ressk.jpg" alt="calligraphy-image">
+            <h9 style="color:rgb(214, 198, 198);font-size:20px;">Shravan's Homepage:</h9> 
+          </div>
+        </div>
           </div>
         </div>
       </nav>
@@ -78,12 +91,13 @@
   <style>
       #footer {
           position: fixed;
-          padding: 10px 10px 20px 10px;
+          padding: 10px 0px 0px 0px;
           bottom: 0;
           width: 100%;
           /* Height of the footer*/ 
           height: 40px;
-          background: grey;
+          background: green;
+          text-align: right;
       }
   </style>
 
@@ -132,7 +146,7 @@ function topFunction() {
     <div id="container">
       <div id="footer">
         <div class="container">
-          &#xA9; Shravan. All rights reserved. Powered by <a href="https://github.com/shravanskotian0811">Shravan</a>.
+          &#xA9;2020 Shravan. All rights reserved. Powered by <a href="https://github.com/shravanskotian0811" style="color:rgb(219, 149, 121)">Shravan</a>.
         </div>
       </div>
     </div>
