--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <li>
           <div class="userView">
             <div class="background"></div>
-            <a href="https://github.com/zkf85" target="_blank"><img class="circle z-depth-2" src="/assets/res/lion_king.jpg"></a>
+            <a href="https://github.com/shravan-kumar-0811" target="_blank"><img class="circle z-depth-2" src="/assets/res/lion_king.jpg"></a>
             <span class="white-text name">Zhu, Kefeng</span>
 			<!--
             <span class="white-text email">zkf1985@gmail.com</span>
@@ -576,7 +576,7 @@ function topFunction() {
       </div>
       <div class="footer-copyright">
         <div class="container">
-          &#xA9; 2020 Everest. All rights reserved. Powered by <a href="https://github.com/zkf85">Kefeng</a>.
+          &#xA9; 2020 Everest. All rights reserved. Powered by <a href="https://github.com/shravan-kumar-0811">Kefeng</a>.
         </div>
       </div>
     </footer>
