--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
       
-      Everest
+      Shravan
       
-      2020
+      2021
     </title>
     <link rel="shortcut icon" type="image/x-icon" href="/assets/res/favicon.ico">
 	<!--
@@ -53,7 +53,7 @@
       <nav class="top-nav ohio-state-scarlet">
         <div class="nav-wrapper">
           <div class="container">
-            <a class="page-title" href="/">Everest<sup>2020</sup></a>
+            <a class="page-title" href="/">Shravan<sup>2021</sup></a>
             <img class="buckeye_leaf" src="/assets/res/buckeye_leaf.png" alt="buckeye_leaf">
           </div>
         </div>
@@ -566,18 +566,7 @@ function topFunction() {
     </main>
     <footer class="page-footer ohio-state-scarlet">
       <div class="container">
-        <div class="row">
-          <div class="col s12">
-            <img src="/assets/res/logo.png" alt="logo"/>
-            <p class="grey-text text-lighten-4">Theme based on <a href="http://materializecss.com">Materialize.css</a> for jekyll sites.
-</p>
-          </div>
-        </div>
-      </div>
-      <div class="footer-copyright">
-        <div class="container">
-          &#xA9; 2020 Everest. All rights reserved. Powered by <a href="https://github.com/shravan-kumar-0811">Shravan</a>.
-        </div>
+          &#xA9; 2021 Shravan. All rights reserved. Powered by <a href="https://github.com/shravan-kumar-0811">Shravan</a>.
       </div>
     </footer>
     <script src="//code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
