--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@ Remember that after enabling this, you have to enter the real dollar sings with 
 <div class="container">
   <div id="page-info">
   <h1>
-  	<i class="material-icons">turned_in</i> About Me </h1> 
+  	<i class="material-icons">turned_in</i> About </h1> 
 </div> 
 
 
@@ -136,23 +136,34 @@ Remember that after enabling this, you have to enter the real dollar sings with 
   <div class="user-pic center-align">
     <a href="https://github.com/shravan-kumar-0811" target="_blank"><img class="circle hoverable z-depth-1" src="/assets/res/shravan.png" /></a>
   </div>
-
   <!--
   <div class="user-intro center-align">
     <h4 class="hidden">I am a <span id="js-rotating">So Simple, Very Doge, Much Wow, Such Cool</span> Text Rotator</h4>
   </div>
   -->
   <div class="user-intro center-align">
-    <h4 class="hidden">Hi I'm Shravan Kumar. </h4>
+    <h4 class="hidden">I'm a Compiler Engineer based in silicon city Bangalore, India.</h4>
+
+      <h9>I enjoy turning complex problems into simple, by writing scripts or building automated tools. When I'm not coding, you'll find me in cricket ground, chess.com or working out in the gym.. </h9>
   </div>
 
   <div class="divider"></div>
   <div class="user-content">
     
-    <h4>Please find my CV below:</h4>
+    <h4>Contact:</h4>
+    <!--
+    <li><i class="material-icons pdf">picture_as_pdf</i><a href="/public/cv/zhukefeng_cv.pdf">CURRICULUM VITAE</a></li>
+    -->
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <li><i class="material-icons pdf">picture_as_pdf</i><a href="/public/cv/zhukefeng_cv.pdf"> CURRICULUM VITAE</a></li>
-
+    <!-- Add font awesome icons -->
+    <a href="https://www.facebook.com/imshrAvs/" class="fa fa-facebook"></a>
+    <a href="https://twitter.com/iamshrAvs11" class="fa fa-twitter"></a>
+    <a href="https://github.com/shravan-kumar-0811" class="fa fa-github"></a>
+    <a href="mailto:skbrahmavar@gmail.com" class="fa fa-google"></a>
+    <a href="https://www.linkedin.com/in/shravan-kumar-bb47b2bb/" class="fa fa-linkedin"></a>
+    <a href="https://instagram.com/_.shanu_?utm_medium=copy_link" class="fa fa-instagram"></a>
   </div>
 </div>
 
