--- a/about.html
+++ b/about.html
@@ -144,7 +144,8 @@ Remember that after enabling this, you have to enter the real dollar sings with 
   <div class="user-intro center-align">
     <h4 class="hidden">I'm a Compiler Engineer based in silicon city Bangalore, India.</h4>
 
-      <h9>I enjoy turning complex problems into simple, by writing scripts or building automated tools. When I'm not coding, you'll find me in cricket ground, chess.com or working out in the gym.. </h9>
+      <h9>I enjoy turning complex problems into simple, by writing scripts or building automated tools. When I'm not coding, you'll find me in cricket ground,
+     <a href="https://lichess.org/@/shrAvs0826">lichess</a> or working out in the gym.. </h9>
   </div>
 
   <div class="divider"></div>
