--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="nav-wrapper">
           <div class="container">
             <a class="page-title" href="/">Shravan<sup>2021</sup></a>
-            <img class="buckeye_leaf" src="/assets/res/buckeye_leaf.png" alt="buckeye_leaf">
+            <!--<img class="buckeye_leaf" src="/assets/res/buckeye_leaf.png" alt="buckeye_leaf">-->
           </div>
         </div>
       </nav>
@@ -112,6 +112,7 @@ Remember that after enabling this, you have to enter the real dollar sings with 
 <script async
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
+<!--
 <div class="container">
   <img src="/assets/res/background.jpeg" alt="Notebook" style="width:100%;">
   <div class="content">
@@ -126,6 +127,31 @@ Remember that after enabling this, you have to enter the real dollar sings with 
     <p>What a beautiful sunrise</p>
   </div>
 </div>
+
+html { 
+  min-height: 100%
+  background-image: url(/assets/res/background.jpeg); 
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+@media only screen and (max-width: 767px) {
+  html {
+     background-image: url(/assets/res/background.jpeg);
+  }
+}
+<div id="container">
+  <div id="background">
+  -->
+<html>
+  <head>
+
+    <h2 style="color:rgb(236, 229, 229);font-size:30px;">Welcome to my page!</h2>
+      
+    <link rel="stylesheet" text="text/css" href="/assets/css/style.css">
+  </head>
+</html>
+
   <div class="col s12 center-align">
     <ul class="pagination">
       <li class="disabled">
