--- a/about.html
+++ b/about.html
@@ -160,8 +160,8 @@ Remember that after enabling this, you have to enter the real dollar sings with 
 
     <!-- Add font awesome icons -->
     <a href="https://www.facebook.com/imshrAvs/" class="fa fa-facebook"></a>
-    <a href="https://twitter.com/iamshrAvs11" class="fa fa-twitter"></a>
-    <a href="https://github.com/shravan-kumar-0811" class="fa fa-github"></a>
+    <space><a href="https://twitter.com/iamshrAvs11" class="fa fa-twitter"></a></space>
+    <space><a href="https://github.com/shravan-kumar-0811" class="fa fa-github"></a></space>
     <a href="mailto:skbrahmavar@gmail.com" class="fa fa-google"></a>
     <a href="https://www.linkedin.com/in/shravan-kumar-bb47b2bb/" class="fa fa-linkedin"></a>
     <a href="https://instagram.com/_.shanu_?utm_medium=copy_link" class="fa fa-instagram"></a>
