--- a/leetcode.html
+++ b/leetcode.html
@@ -52,8 +52,8 @@
       <nav class="top-nav ohio-state-scarlet">
         <div class="nav-wrapper">
           <div class="container">
-            <a class="page-title" href="/">Everest<sup>2020</sup></a>
-            <img class="buckeye_leaf" src="/assets/res/buckeye_leaf.png" alt="buckeye_leaf">
+            <a class="page-title" href="/">Shravan<sup>2021</sup></a>
+            <img class="buckeye_leaf" src="/assets/res/sk_logo.jpg" alt="sk">
           </div>
         </div>
       </nav>
@@ -66,30 +66,29 @@
         <li>
           <div class="userView">
             <div class="background"></div>
-            <a href="https://github.com/zkf85" target="_blank"><img class="circle z-depth-2" src="/assets/res/lion_king.jpg"></a>
-            <span class="white-text name">Zhu, Kefeng</span>
+            <a href="https://github.com/shravan-kumar-0811" target="_blank"><img class="circle z-depth-2" src="/assets/res/sk.jpg"></a>
+            <span class="white-text name">Shravan Kumar</span>
 			<!--
-            <span class="white-text email">zkf1985@gmail.com</span>
+            <span class="white-text email">shravanskotian0811@gmail.com</span>
 			-->
-            <span class="white-text email"><i>A Programmer, An AI Practitioner</i></span>
+            <span class="white-text email"><i>A Programmer, A Technologist</i></span>
           </div>
         </li>
 
-        <li class="subheader">BLOG</li>
+        <div class="userView">
+        <div class="background"></div>
+        <li class="subheader"><b>BLOG</b></li>
         <li><a class="waves-effect" href="/"><i class="material-icons">home</i>Home</a></li>
         <li><a class="waves-effect" href="/categories"><i class="material-icons">sort</i>Categories</a></li>
         <li><a class="waves-effect" href="/tags"><i class="material-icons">label</i>Tags</a></li>
 <!--
 <li><a class="waves-effect" href="/feed.xml" target="_blank"><i class="material-icons">rss_feed</i>RSS</a></li>
 -->        
-        <li class="subheader">COLLECTIONS</li>
-        <li><a class="waves-effect" href="/cs229"><i class="material-icons">widgets</i>CS229</a></li>
-        <li><a class="waves-effect" href="/mit6006"><i class="material-icons">storage</i>MIT6006</a></li>
+        <li class="subheader"><b>COLLECTIONS</b></li>
         <li><a class="waves-effect" href="/leetcode"><i class="material-icons">code</i>LeetCode</a></li>
 
-        <li class="subheader">OTHERS</li>
+        <li class="subheader"><b>OTHERS</b></li>
         <li><a class="waves-effect" href="/about"><i class="material-icons">person</i>About Me</a></li>
-        <li><a class="waves-effect" href="/calligraphy"><i class="material-icons">dashboard</i>書</a></li>
         <!-- <li><a class="waves-effect" href="/contact"><i class="material-icons">email</i>Contact</a></li> -->
       </ul>
     </header>
@@ -635,18 +634,8 @@ function topFunction() {
     </main>
     <footer class="page-footer ohio-state-scarlet">
       <div class="container">
-        <div class="row">
-          <div class="col s12">
-            <img src="/assets/res/logo.png" alt="logo"/>
-            <p class="grey-text text-lighten-4">Theme based on <a href="http://materializecss.com">Materialize.css</a> for jekyll sites.
-</p>
-          </div>
-        </div>
-      </div>
-      <div class="footer-copyright">
-        <div class="container">
-          &#xA9; 2020 Everest. All rights reserved. Powered by <a href="https://github.com/zkf85">Kefeng</a>.
-        </div>
+          &#xA9; 2021 Shravan. All rights reserved. Powered by <a href="https://github.com/shravan-kumar-0811
+          ">Shravan</a>.
       </div>
     </footer>
     <script src="//code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
