--- a/about.html
+++ b/about.html
@@ -125,6 +125,13 @@ Remember that after enabling this, you have to enter the real dollar sings with 
 <script async
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
+<div class="userView">
+  <div class="background"></div>
+  <div class="content">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" text="text/css" href="/assets/css/about.css">
+  </div>
+</div>
 
 <div class="container">
   <div id="page-info">
@@ -144,7 +151,7 @@ Remember that after enabling this, you have to enter the real dollar sings with 
   </div>
   -->
   <div class="user-intro center-align">
-    <h4 class="hidden">I'm a Compiler Engineer based in silicon city Bangalore, India.</h4>
+    <h4 class="about_message">I'm a Compiler Engineer based in silicon city Bangalore, India.</h4>
 
       <h9>I enjoy turning complex problems into simple, by writing scripts or building automated tools. When I'm not coding, you'll find me in cricket ground,
      <a href="https://lichess.org/@/shrAvs0826" style="color:rgb(98, 16, 231)" size="80px" >lichess</a> or working out in the gym.. </h9>
