--- a/leetcode.html
+++ b/leetcode.html
@@ -120,6 +120,13 @@ Remember that after enabling this, you have to enter the real dollar sings with 
   	<i class="material-icons">turned_in</i> LeetCode </h1> 
 </div> 
 
+<div class="userView">
+  <div class="background"></div>
+  <div class="content">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" text="text/css" href="/assets/css/leetcode.css">
+  </div>
+</div>
 
 <div class="row">
   <div class="col s12 tag-div">
