--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>
-    Shravan Kumar
+    Shravan
     2021
   </title>
   <link rel="shortcut icon" type="image/x-icon" href="/assets/res/favicon.ico">
@@ -114,7 +114,7 @@
         </div>
       </li>
       <div class="userView">
-        <div class="background"></div>
+        <!--<div class="background"></div>-->
         <li class="subheader"><b>BLOG</b></li>
         <li><a class="waves-effect" href="/"><i class="material-icons">home</i>Home</a></li>
         <li><a class="waves-effect" href="/categories"><i class="material-icons">sort</i>Categories</a></li>
