--- a/page2/index.html
+++ b/page2/index.html
@@ -38,11 +38,11 @@
 <meta property="og:description" content="Theme based on Materialize.css for jekyll sites." />
 <link rel="canonical" href="http://localhost:4000/page2/" />
 <meta property="og:url" content="http://localhost:4000/page2/" />
-<meta property="og:site_name" content="Everest" />
+<meta property="og:site_name" content="Shravan" />
 <link rel="prev" href="http://localhost:4000/" />
 <link rel="next" href="http://localhost:4000/page3" />
 <script type="application/ld+json">
-{"url":"http://localhost:4000/page2/","headline":"Everest","description":"Theme based on Materialize.css for jekyll sites.","@type":"WebPage","@context":"http://schema.org"}</script>
+{"url":"http://localhost:4000/page2/","headline":"Shravan","description":"Theme based on Materialize.css for jekyll sites.","@type":"WebPage","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   </head>
