--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Remember that after enabling this, you have to enter the real dollar sings with 
       <div class="card-content">
         <!--<span id="post-title" class="card-title">Vundle Usage Memo</span>
         -->
-        <sh><a id="post-title" class="card-title" href="/categories"><i class="material-icons">sort</i>Categories</a></sh>
+        <a id="post-title" class="card-title" href="/categories"><i class="material-icons">sort</i>Categories</a>
       </div>
       
     </div>
