--- a/page2/index.html
+++ b/page2/index.html
@@ -316,7 +316,7 @@ Description:
 
         </p>
         <p id="post-content"><blockquote>
-  <p>A collection of frequently used python/numpy techniques on matrix (numpy arrays) manipulation and operations.</p>
+  <p><h6>A collection of frequently used python/numpy techniques on matrix (numpy arrays) manipulation and operations.</h6></p>
 </blockquote>
 
 <p><img src="/public/img/20190228-numpy_broadcasting.png" alt="" /></p>
