--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
           <i class="material-icons">menu</i>
         </a>
       </div>
-<!--       <ul id="slide-out" class="side-nav fixed"> -->
+      <ul id="slide-out" class="side-nav fixed">
         <li>
           <div class="userView">
             <div class="background"></div>
@@ -102,7 +102,7 @@
         <li class="subheader"><b>OTHERS</b></li>
         <li><a class="waves-effect" href="/about"><i class="material-icons">person</i>About Me</a></li>
         <!-- <li><a class="waves-effect" href="/contact"><i class="material-icons">email</i>Contact</a></li> -->
-<!--       </ul> -->
+      </ul>
     </header>
     <main>
 
