--- a/page3/index.html
+++ b/page3/index.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
       
-      Everest
+      Shravan
       
-      2020
+      2023
     </title>
     <link rel="shortcut icon" type="image/x-icon" href="/assets/res/favicon.ico">
 	<!--
